# openairinterface5g

./: .gitignore
docker/: Dockerfile.build.ubuntu
openair2/E2AP/RAN_FUNCTION/O-RAN/: ran_func_kpm (사본).c  ran_func_kpm.c  ran_func_kpm_subs.c  ran_func_rc (사본 2).c  ran_func_rc.c  ran_func_rc_flowck.c
openair2/E2AP/flexric/: CMakeLists.txt
openair2/E2AP/flexric/examples/xApp/c/: CMakeLists.txt
openair2/E2AP/flexric/examples/xApp/c/common/: kpm_state.c  kpm_state.h  migration_function.c  migration_function.h
openair2/E2AP/flexric/examples/xApp/c/kpm_rc/: CMakeLists.txt  xapp_kpm_rc.c  xapp_kpm_rc_custom.c  xapp_kpm_rc_prb.c  xapp_kpm_rc_prb_dedi.c
openair2/E2AP/flexric/examples/xApp/c/migration/: CMakeLists.txt  migration_action.c  migration_action.h
openair2/E2AP/flexric/examples/xApp/c/monitor/: CMakeLists.txt  xapp_kpm_moni.c  xapp_kpm_moni_mr.c  xapp_kpm_moni_redis.c  xapp_kpm_moni_show.c
openair2/E2AP/flexric/examples/xApp/c/yubin/: CMakeLists.txt  xapp_kpm_moni_yu.c  xapp_kpm_rc_yu.c
openair2/E2AP/flexric/src/agent/: e2_agent.c  msg_handler_agent_flowck.c
openair2/E2AP/flexric/src/ric/: near_ric.c
openair2/LAYER2/NR_MAC_gNB/: gNB_scheduler_dlsch (사본).c  gNB_scheduler_dlsch (사본_csv_before).c  gNB_scheduler_dlsch_5_16.c  gNB_scheduler_dlsch_no_dedi.c  nr_mac_gNB.h
targets/PROJECTS/GENERIC-NR-5GC/CONF/: a.gnb.sa.band78.fr1.51PRB.usrpb210.conf  cu_gnb.conf  gnb.sa.band78.fr1.106PRB.usrpb210.conf  gnb.sa.band78.fr1.106PRB.usrpb210.yaml  gnb.sa.band78.fr1.106PRB.usrpb210_docker.conf  ue.conf  ue1 (사본).conf  ue1.conf  ue2.conf  ue3.conf  ue4.conf
(+2 files in other folders)
